ajout d'un fond pour la troisième partie et de bordures

--- a/formulaire.css
+++ b/formulaire.css
@@ -13,11 +13,15 @@ mark
   float: left;
   width: 100%;
   height: 250px;
-  background: #db0a5b
+  background: #9a12b3
 }
 .rectangle3 {
   float: left;
   width: 100%;
-  height: 250px;
-  background: #9a12b3
+  height: 180px;
+  background: #db0a5b
+}
+.border {
+  border-top: 3px #b1b1b1 double;
+  border-left: 3px #b1b1b1 double;
 }
